--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 .centeredContainer {
     display: flex;
     justify-content: center;
-    align-items:center;
 }
 
-.buttonItems {
-    width: 10vh;
-    height: 10vh;
+.chartContainer {
+    width: 50%;
 }
